--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=bcb2343a06bdc78ff476ab10147df10d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="mysql://127.0.0.1:3306/webprojectsymfony?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/webprojectsymfony?serverVersion=mariadb-10.4.11"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
